--- a/product.html
+++ b/product.html
@@ -56,7 +56,7 @@
       <div class="row mt-5 justify-content-center">
         <div class="col-lg-4">
           <div class="card">
-            <img src="img/Perabot.jpg" class="card-img-top" alt="...">
+            <img src="Perabot.jpg" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">MEJA RIAS</h5>
               <p class="card-text">
@@ -71,7 +71,7 @@
         </div>
         <div class="col-lg-4">
           <div class="card">
-            <img src="img/Perabot2.jpg" class="card-img-top" alt="...">
+            <img src="Perabot2.jpg" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">KASUR&DIPAN</h5>
               <p class="card-text">
@@ -86,7 +86,7 @@
         </div>
         <div class="col-lg-4">
           <div class="card">
-            <img src="img/Perabot3.jpg" class="card-img-top" alt="...">
+            <img src="Perabot3.jpg" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">MEJA KECIL</h5>
               <p class="card-text">
@@ -102,7 +102,7 @@
         <br>
         <div class="col-lg-4 mt-3">
           <div class="card">
-            <img src="img/Perabot4.jpg" class="card-img-top" alt="...">
+            <img src="Perabot4.jpg" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">KURSI PENDEK BULAT</h5>
               <p class="card-text">
@@ -117,7 +117,7 @@
         </div>
         <div class="col-lg-4 mt-3">
           <div class="card">
-            <img src="img/Perabot5.jpg" class="card-img-top" alt="...">
+            <img src="Perabot5.jpg" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">3 IN 1(MEJA,KURSI,RAKSEPATU)</h5>
               <p class="card-text">
@@ -132,7 +132,7 @@
         </div>
         <div class="col-lg-4 mt-3">
           <div class="card">
-            <img src="img/Perabot6.jpg" class="card-img-top" alt="...">
+            <img src="Perabot6.jpg" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">PENTUP SAKLAR LISTRIK</h5>
               <p class="card-text">
@@ -148,7 +148,7 @@
         <br>
         <div class="col-lg-4 mt-3">
           <div class="card">
-            <img src="img/Perabot7.jpg" class="card-img-top" alt="...">
+            <img src="Perabot7.jpg" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">MEJA RIAS KECIL</h5>
               <p class="card-text">
@@ -163,7 +163,7 @@
         </div>
         <div class="col-lg-4 mt-3">
           <div class="card">
-            <img src="img/Perabot8.jpg" class="card-img-top" alt="...">
+            <img src="Perabot8.jpg" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">MEJA RIAS DORONG</h5>
               <p class="card-text">
@@ -178,7 +178,7 @@
         </div>
         <div class="col-lg-4 mt-3">
           <div class="card">
-            <img src="img/Perabot9.jpg" class="card-img-top" alt="...">
+            <img src="Perabot9.jpg" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">DIPAN</h5>
               <p class="card-text">
@@ -191,7 +191,7 @@
             </div>
           </div>
         </div>
-        <a href="TokoFurniture.html"><i class="bi bi-arrow-left-circle back-icon mt-5"></i></a>
+        <a href="index.html"><i class="bi bi-arrow-left-circle back-icon mt-5"></i></a>
       </div>
     </div>
   </div>
